syntax="proto3";

import "common/common.proto";
option java_multiple_files=true;
option java_package="com.grpcflix.userservice";

message UserSearchRequest{
  string login_id=1;
}

message UserResponse{
  string login_id=1;
  string name=2;
  common.Genre genre=3;
}

message UserGenreUpdate{
  string login_id=1;
  common.Genre genre=2;
}

service UserService{
  rpc getUserGenre(UserSearchRequest) returns (UserResponse);
  rpc updateUserGenre(UserGenreUpdate) returns (UserResponse);

}